--- a/DM - Personal Portfolio/themes/dm-theme/templates-html/body.html
+++ b/DM - Personal Portfolio/themes/dm-theme/templates-html/body.html
@@ -1,12 +1,3 @@
+<section id="page-content">
 
-<div id="body">
-  <section class="container">
-    <h1>This is a heading H1</h1>
-    <h2>This is a heading H2</h2>
-    <h3>This is a heading H3</h6>
-    <h4>This is a heading H4</h6>
-    <h5>This is a heading H5</h6>
-    <h6>This is a heading H6</h6>
-    <p>This is a paragraph.</p>
-  </section>
-</div>
+</section>
