Page: Home - in progress
- Ocean Animation finished

--- a/DM - Personal Portfolio/themes/dm-theme/templates-html/svg-list.html
+++ b/DM - Personal Portfolio/themes/dm-theme/templates-html/svg-list.html
@@ -23,7 +23,7 @@
 </svg>
 
 <!-- Category Web Development -->
-<svg width="512" height="512" viewBox="0 0 512 512" fill="none" xmlns="http://www.w3.org/2000/svg">
+<svg width="512" height="512" viewBox="0 0 512 512" fill="none">
   <g clip-path="url(#clip0_1_37)">
     <mask id="mask0_1_37" style="mask-type:luminance" maskUnits="userSpaceOnUse" x="0" y="0" width="512" height="512">
       <path d="M512 0H0V512H512V0Z" fill="white"/>
@@ -82,7 +82,7 @@
 </svg>
 
 <!-- Category Visual Media -->
-<svg width="512" height="512" viewBox="0 0 512 512" fill="none" xmlns="http://www.w3.org/2000/svg">
+<svg width="512" height="512" viewBox="0 0 512 512" fill="none">
   <g clip-path="url(#clip0_1_2)">
     <mask id="mask0_1_2" style="mask-type:luminance" maskUnits="userSpaceOnUse" x="0" y="0" width="512" height="512">
       <path d="M512 0H0V512H512V0Z" fill="white"/>
@@ -128,7 +128,7 @@
 
 
 <!-- Category Miscellaneous -->
-<svg width="512" height="512" viewBox="0 0 512 512" fill="none" xmlns="http://www.w3.org/2000/svg">
+<svg width="512" height="512" viewBox="0 0 512 512" fill="none">
   <g clip-path="url(#clip0_0_3)">
     <mask id="mask0_0_3" style="mask-type:luminance" maskUnits="userSpaceOnUse" x="0" y="0" width="512" height="512">
       <path d="M511.999 0H0V511.999H511.999V0Z" fill="white"/>
@@ -169,6 +169,22 @@
     </clipPath>
   </defs>
 </svg>
+<!-- Wave Ocean -->
+<svg width="1600" height="198" viewBox="0 0 1600 198">
+  <g clip-path="url(#clip0_1_2)">
+    <path fill-rule="evenodd" clip-rule="evenodd" d="M1600 121C1289 121 1190.1 -0.250011 789 -1.06613e-05C389 -1.06613e-05 289 121 0 121V198H1600C1600 198 1600 150 1600 121Z" fill="url(#paint0_linear_1_2)"/>
+  </g>
+  <defs>
+    <linearGradient id="paint0_linear_1_2" x1="-78400" y1="-2169.89" x2="-78400" y2="19800" gradientUnits="userSpaceOnUse">
+      <stop stop-color="#99C1F0" stop-opacity="0.25"/>
+      <stop offset="1" stop-color="#5D6977"/>
+    </linearGradient>
+    <clipPath id="clip0_1_2">
+      <rect width="1600" height="198" fill="white"/>
+    </clipPath>
+  </defs>
+</svg>
+
 
 
 
