--- a/DM - Personal Portfolio/themes/dm-theme/templates-html/wave-animation.html
+++ b/DM - Personal Portfolio/themes/dm-theme/templates-html/wave-animation.html
@@ -18,6 +18,8 @@
     <div class="wave"></div>
     <div class="wave"></div>
     <div class="wave"></div>
+    <div class="wave"></div>
+    <div class="wave"></div>
   </div>
 
   <!-- Ocean Animation End -->
