--- a/DM - Personal Portfolio/themes/dm-theme/templates-html/section-web-development-description.html
+++ b/DM - Personal Portfolio/themes/dm-theme/templates-html/section-web-development-description.html
@@ -17,24 +17,31 @@
             <li>
               <div class="dm-description-item">
                 <h3>DESIGN</h3>
-                <p>I can provide a responsive website with HTML and CSS and all your pages will look and fit perfect on every device. Also you can choice any theme or design to implement at your demand.</p>
+                <p>
+                  I can create a responsive website using HTML and CSS/SCSS to ensure that all your pages look and fit perfectly on every device. Additionally, you have the freedom to choose any theme or design that you would like to implement according to your preferences.</p>
               </div>
               <div class="dm-description-item">
                 <h3>SEO</h3>
-                <p>Improve the quality and quantity of your website traffic from search engines with my SEO knowledge. All pages will have meta title and meta description for specific keywords and a sitemap will be generated.</p>
+                <p>
+                  Boost your website's search engine traffic with my SEO expertise. I'll optimize all pages with keyword-specific meta titles and descriptions, and generate a sitemap for improved visibility.</p>
               </div>
             </li>
             <li>
-              <img src="../../../content/img/design-elements/website-responsive-image.jpg" alt="Web Development Responsive Design">
+              <section class="dm-web-responsive">
+                <img class="dm-laptop-responsive" src="../../../content/img/design-elements/website-responsive-laptop.png" alt="Web Development Responsive Design">
+                <img class="dm-tablet-responsive" data-animation="dm-scroll" src="../../../content/img/design-elements/website-responsive-tablet.png" alt="Web Development Responsive Design">
+                <img class="dm-phone-responsive" data-animation="dm-scroll" src="../../../content/img/design-elements/website-responsive-phone.png"  alt="Web Development Responsive Design">
+              </section>
             </li>
             <li>
               <div class="dm-description-item">
                 <h3>DEVELOPMENT</h3>
-                <p>I can implement modules and develop web applications and functions in platforms like Prestashop and WordPress and languages as: PHP, TPL, HTML, CSS, Java Script and MySQL.</p>
+                <p>
+                  I specialize in implementing modules, developing web applications, and creating functions for platforms such as Prestashop and WordPress. My expertise covers a range of languages including PHP, TPL, HTML, CSS, JavaScript, and MySQL.</p>
               </div>
               <div class="dm-description-item">
                 <h3>SUPPORT</h3>
-                <p>You can get solutions and assistance for every problem or idea for your project to reach the desired result. For more information use the form in contact page.</p>
+                <p>I offer comprehensive solutions and assistance for all your project needs, helping you achieve the desired results. For further information, please use the contact form available on the website's contact page.</p>
               </div>
             </li>
           </ul>
