Footer Adjustments and Scroll Responsive Element

--- a/DM - Personal Portfolio/content/pages/home.html
+++ b/DM - Personal Portfolio/content/pages/home.html
@@ -364,17 +364,59 @@
       <div class="dm-footer-contact">
         <h5>Contact</h5>
         <ul>
-          <li><a href="#">CV English</a></li>
-          <li><a href="#">CV Romanian</a></li>
-          <li><a href="#">Contact Form</a></li>
+          <li>
+            <a href="#">
+              <svg data-svg-type="fill" viewBox="0 0 320 512">
+                <path d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"/>
+              </svg>
+              <span>CV English</span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <svg data-svg-type="fill" viewBox="0 0 320 512">
+                <path d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"/>
+              </svg>
+              <span>CV Romanian</span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <svg data-svg-type="fill" viewBox="0 0 320 512">
+                <path d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"/>
+              </svg>
+              <span>Contact Form</span>
+            </a>
+          </li>
         </ul>
       </div>
       <div class="dm-footer-portfolio">
         <h5>Portfolio</h5>
         <ul>
-          <li><a href="#">Web Development Projects</a></li>
-          <li><a href="#">Visual Media Projects</a></li>
-          <li><a href="#">Miscellaneous Projects</a></li>
+          <li>
+            <a href="#">
+              <svg data-svg-type="fill" viewBox="0 0 320 512">
+                <path d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"/>
+              </svg>
+              <span>Web Development Projects</span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <svg data-svg-type="fill" viewBox="0 0 320 512">
+                <path d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"/>
+              </svg>
+              <span>Visual Media Projects</span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <svg data-svg-type="fill" viewBox="0 0 320 512">
+                <path d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"/>
+              </svg>
+              <span>Miscellaneous Projects</span>
+            </a>
+          </li>
         </ul>
       </div>
       <div class="dm-socials-footer">
