--- a/DM - Personal Portfolio/content/pages/home.html
+++ b/DM - Personal Portfolio/content/pages/home.html
@@ -3,6 +3,7 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+  <meta name="viewport" content="width=device-width">
   <title>Denis Marginas - Portfolio</title>
   <link rel="stylesheet" href="../../themes/dm-theme/assets/css/style.css">
   <link rel="icon" type="image/x-icon" href="../../content/img/favicon/DM - Favicon.ico">
@@ -62,8 +63,8 @@
     <!-- SECTION ABOUT START -->
     <section class="dm-about">
     <div>
-      <div>
-        <img src="../img/personal-images/DM - Personal Image 1.png" width="357px" height="570px" alt="DM - Personal Image">
+      <div data-motion="transition-fade-0 transition-slideInRight-0" data-duration="1s" data-delay="0.3s">
+        <img data-motion="transition-fade-0" data-duration="1s" data-delay="0.7s" src="../img/personal-images/DM - Personal Image 1.png" width="357px" height="570px" alt="DM - Personal Image">
         <svg data-svg-type="fill" width="1086" height="1682" viewBox="0 0 1086 1682">
           <path d="M1 502.5C1 458 37 422 81.5 422C126 422 162 458 162 502.5V969.5C162 1014 126 1050 81.5 1050C37 1050 1 1014 1 969.5V502.5Z"/>
           <path d="M319 797.5C319 753 355 717 399.5 717C444 717 480 753 480 797.5V1264.5C480 1309 444 1345 399.5 1345C355 1345 319 1309 319 1264.5V797.5Z"/>
@@ -72,13 +73,13 @@
           <path d="M631 1134.5C631 1090 667 1054 711.5 1054C756 1054 792 1090 792 1134.5V1601.5C792 1646 756 1682 711.5 1682C667 1682 631 1646 631 1601.5V1134.5Z"/>
           <path d="M925 816.5C925 772 961 736 1005.5 736C1050 736 1086 772 1086 816.5V1283.5C1086 1328 1050 1364 1005.5 1364C961 1364 925 1328 925 1283.5V816.5Z"/>
         </svg>
-        <span></span>
+        <span data-motion="transition-fade-0 transition-slideInRight-0" data-duration="1s" data-delay="0.7s"></span>
       </div>
       <div>
-        <h2>About</h2>
-        <p>My name is Denis Ionuț Mărginaș, I'm 25-year-old,, and I've been working as a full-stack web developer and photo-video editor since 2019. Before entering the web development field, I worked as a freelance video editor, specializing in editing videos for video games. After completing my university studies in Mathematics and Informatics, I shifted my focus to web development and began pursuing a career in that field.</p>
-        <p>In 2019, I joined Pia Soft Product as a web developer and video-photo editor. During my time there, I worked on various tasks, including creating presentation websites and online shops using platforms like WordPress and Prestashop. I also handled SEO optimization, website and host maintenance, customer communication, and designing banners, logos, and video advertisements. Working independently on my tasks, I took the initiative to learn from scratch, except for my prior experience in video editing. Additionally, I developed web applications using PHP, TPL, SQL, JavaScript, jQuery, HTML, CSS, and more.</p>
-        <p>Towards the end of 2021, I transitioned to working full time at Netex Romania, where I was hired as a front-end developer. My responsibilities involved maintaining multiple WordPress websites and working on web design projects. The web design aspect was particularly challenging as I received templates and page sections in formats, similar to Figma projects, and had to recreate them as static web pages using HTML, SASS, Node.js, Bootstrap, JavaScript, and jQuery. Initially, I worked independently on my part of the project, but later collaborated with a colleague who joined to assist with the same project. During this time, I gained valuable experience with the GitLab platform, learned Git commands, and improved my teamwork skills.</p>
+        <h2 data-motion="transition-fade-0 transition-slideInLeft-0" data-duration="0.5s">About</h2>
+        <p data-motion="transition-fade-0 transition-slideInLeft-0">My name is Denis Ionuț Mărginaș, I'm 25-year-old,, and I've been working as a full-stack web developer and photo-video editor since 2019. Before entering the web development field, I worked as a freelance video editor, specializing in editing videos for video games. After completing my university studies in Mathematics and Informatics, I shifted my focus to web development and began pursuing a career in that field.</p>
+        <p data-motion="transition-fade-0 transition-slideInLeft-0">In 2019, I joined Pia Soft Product as a web developer and video-photo editor. During my time there, I worked on various tasks, including creating presentation websites and online shops using platforms like WordPress and Prestashop. I also handled SEO optimization, website and host maintenance, customer communication, and designing banners, logos, and video advertisements. Working independently on my tasks, I took the initiative to learn from scratch, except for my prior experience in video editing. Additionally, I developed web applications using PHP, TPL, SQL, JavaScript, jQuery, HTML, CSS, and more.</p>
+        <p data-motion="transition-fade-0 transition-slideInLeft-0">Towards the end of 2021, I transitioned to working full time at Netex Romania, where I was hired as a front-end developer. My responsibilities involved maintaining multiple WordPress websites and working on web design projects. The web design aspect was particularly challenging as I received templates and page sections in formats, similar to Figma projects, and had to recreate them as static web pages using HTML, SASS, Node.js, Bootstrap, JavaScript, and jQuery. Initially, I worked independently on my part of the project, but later collaborated with a colleague who joined to assist with the same project. During this time, I gained valuable experience with the GitLab platform, learned Git commands, and improved my teamwork skills.</p>
       </div>
     </div>
   </section>
@@ -88,9 +89,9 @@
     <section class="dm-portfolio-categories">
       <container>
         <div>
-          <h2>Portfolio</h2>
+          <h2 data-motion="transition-fade-0 transition-slideInLeft-0" data-duration="0.7s" data-delay="0.1s">Portfolio</h2>
           <ul>
-            <li>
+            <li data-motion="transition-fade-0 transition-slideInLeft-0" data-duration="0.5s" data-delay="0.2s">
               <div class="category-card">
                 <img src="../img/design-elements/overlay-particles.png" alt="Background">
                 <img src="../img/categories/category-photo-web-development-photo.jpg" alt="Web Development Projects Background Image">
@@ -163,7 +164,7 @@
                 </div>
               </div>
             </li>
-            <li>
+            <li data-motion="transition-fade-0 transition-slideInLeft-0" data-duration="0.5s" data-delay="0.4s">
               <div class="category-card">
                 <img src="../img/design-elements/overlay-particles.png" alt="Background">
                 <img src="../img/categories/category-photo-visual-media.jpg" alt="Visual Media Projects Background Image">
@@ -222,7 +223,7 @@
                 </div>
               </div>
             </li>
-            <li>
+            <li data-motion="transition-fade-0 transition-slideInLeft-0" data-duration="0.5s" data-delay="0.6s">
               <div class="category-card">
                 <img src="../img/design-elements/overlay-particles.png" alt="Background">
                 <img src="../img/categories/category-photo-miscellaneous.jpg" alt="Miscellaneous Projects Background Image">
@@ -284,7 +285,7 @@
       </container>
       <!-- Ocean Animation Start -->
 
-      <div class="ocean">
+      <div class="ocean" data-motion="transition-fade-0" data-duration="4s" data-delay="0s">
         <div class="wave"></div>
         <div class="wave"></div>
         <div class="wave"></div>
@@ -301,14 +302,14 @@
       <container>
         <ul>
           <li>
-            <h2>
+            <h2 data-motion="transition-fade-0 transition-slideInRight-0" data-duration="1s" data-delay="0s">
               <span>WEB DEVELOPMENT</span>
               <span>EXPERIENCE</span>
             </h2>
-            <p>Since 2019 I have been involved in many web projects, where for various companies I have created: presentation sites: online stores, web applications, SEO optimization, web design and logo.</p>
+            <p data-motion="transition-fade-0 transition-slideInRight-0" data-duration="1s" data-delay="0.4s">Since 2019 I have been involved in many web projects, where for various companies I have created: presentation sites: online stores, web applications, SEO optimization, web design and logo.</p>
           </li>
           <li>
-            <img src="../img/design-elements/portfolio-experience-image.png" alt="Web Development Experience">
+            <img width="320px" height="260" src="../img/design-elements/portfolio-experience-image.png" alt="Web Development Experience" data-motion="transition-fade-0 transition-slideInLeft-0" data-duration="1s" data-delay="0.1s">
           </li>
         </ul>
       </container>
@@ -320,33 +321,33 @@
       <container>
         <ul>
           <li>
-            <div class="dm-description-item">
-              <h3>DESIGN</h3>
-              <p>
+            <div class="dm-description-item" >
+              <h3 data-motion="transition-fade-0 transition-slideInRight-0" data-duration="0.3s" data-delay="0s">DESIGN</h3>
+              <p data-motion="transition-fade-0 transition-slideInRight-0" data-duration="0.3s" data-delay="0.3s">
                 I can create a responsive website using HTML and CSS/SCSS to ensure that all your pages look and fit perfectly on every device. Additionally, you have the freedom to choose any theme or design that you would like to implement according to your preferences.</p>
             </div>
             <div class="dm-description-item">
-              <h3>SEO</h3>
-              <p>
+              <h3 data-motion="transition-fade-0 transition-slideInRight-0" data-duration="0.3s" data-delay="0.2s">SEO</h3>
+              <p data-motion="transition-fade-0 transition-slideInRight-0" data-duration="0.3s" data-delay="0.5s">
                 Boost your website's search engine traffic with my SEO expertise. I'll optimize all pages with keyword-specific meta titles and descriptions, and generate a sitemap for improved visibility.</p>
             </div>
           </li>
           <li>
-            <section class="dm-web-responsive">
-              <img class="dm-laptop-responsive" src="../img/design-elements/website-responsive-laptop.png" alt="Web Development Responsive Design">
-              <img class="dm-tablet-responsive" data-animation="dm-scroll" src="../img/design-elements/website-responsive-tablet.png" alt="Web Development Responsive Design">
-              <img class="dm-phone-responsive" data-animation="dm-scroll" src="../img/design-elements/website-responsive-phone.png"  alt="Web Development Responsive Design">
+            <section class="dm-web-responsive" data-motion="transition-fade-0">
+              <img width="320px" height="260" class="dm-laptop-responsive" src="../img/design-elements/website-responsive-laptop.png" alt="Web Development Responsive Design">
+              <img width="320px" height="260" class="dm-tablet-responsive" data-animation="dm-scroll" src="../img/design-elements/website-responsive-tablet.png" alt="Web Development Responsive Design">
+              <img width="320px" height="260" class="dm-phone-responsive" data-animation="dm-scroll" src="../img/design-elements/website-responsive-phone.png"  alt="Web Development Responsive Design">
             </section>
           </li>
           <li>
             <div class="dm-description-item">
-              <h3>DEVELOPMENT</h3>
-              <p>
+              <h3 data-motion="transition-fade-0 transition-slideInLeft-0" data-duration="0.3s" data-delay="0.5s">DEVELOPMENT</h3>
+              <p data-motion="transition-fade-0 transition-slideInLeft-0" data-duration="0.3s" data-delay="0.8s">
                 I specialize in implementing modules, developing web applications, and creating functions for platforms such as Prestashop and WordPress. My expertise covers a range of languages including PHP, TPL, HTML, CSS, JavaScript, and MySQL.</p>
             </div>
             <div class="dm-description-item">
-              <h3>SUPPORT</h3>
-              <p>I offer comprehensive solutions and assistance for all your project needs, helping you achieve the desired results. For further information, please use the contact form available on the website's contact page.</p>
+              <h3 data-motion="transition-fade-0 transition-slideInLeft-0" data-duration="0.3s" data-delay="0.7s">SUPPORT</h3>
+              <p data-motion="transition-fade-0 transition-slideInLeft-0" data-duration="0.3s" data-delay="1.1s">I offer comprehensive solutions and assistance for all your project needs, helping you achieve the desired results. For further information, please use the contact form available on the website's contact page.</p>
             </div>
           </li>
         </ul>
