--- a/DM-PersonalPortfolio/themes/dm-theme/templates-html/section-contact-data.html
+++ b/DM-PersonalPortfolio/themes/dm-theme/templates-html/section-contact-data.html
@@ -69,18 +69,54 @@
                                             </svg>          </span>
     </section>
 </header><div id="page-content">
-<section class="dm-web-development-experience grid-background-animation">
+<section class="dm-contact-data grid-background-animation">
     <container>
         <ul>
             <li>
-                <h2 data-motion="transition-fade-0 transition-slideInRight-0" data-duration="1s" data-delay="0s">
-                    <span>WEB DEVELOPMENT</span>
-                    <span>EXPERIENCE</span>
-                </h2>
-                <p data-motion="transition-fade-0 transition-slideInRight-0" data-duration="1s" data-delay="0.4s">Since 2019, I have actively immersed myself in numerous web projects, collaborating with diverse companies to create a wide range of online solutions. Throughout this period, my expertise has encompassed the development of presentation sites, online stores, web applications, SEO optimization, as well as web design.</p>
+                <div class="dm-person-circle-card" data-motion="transition-fade-0 transition-slideInRight-0" data-duration="1s">
+                    <span>
+                        <div>
+                            <span class="circle-background"></span>
+                            <img data-motion="transition-fade-0" data-duration="1.4s"  src="../../../content/img/personal-images/dm-personal-image-0.png" width="357px" height="570px" alt="DM - Personal Image">
+                        </div>
+                    </span>
+                </div>
             </li>
             <li>
-                <img width="320px" height="260" src="../../../content/img/design-elements/portfolio-experience-image.png" alt="Web Development Experience" data-motion="transition-fade-0 transition-slideInLeft-0" data-duration="1s" data-delay="0.1s">
+                <h2 data-motion="transition-fade-0 transition-slideInLeft-0" data-duration="0.5s">Contact Data</h2>
+                <p data-motion="transition-fade-0 transition-slideInLeft-0">You can reach me by phone on WhatsApp or through my personal email address. Contact details are provided in the section below.</p>
+                <ul>
+                    <li data-motion="transition-fade-0 transition-slideInLeft-0" data-duration="0.6s">
+                        <svg data-svg-type="fill" viewBox="0 0 320 512">
+                                               <path d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"/>
+                                             </svg>                        <span>
+                            <b>E-mail:</b>
+                            <a href="mailto:denismarginas09@gmail.com">denismarginas09@gmail.com</a>
+                        </span>
+                    </li>
+                    <li data-motion="transition-fade-0 transition-slideInLeft-0" data-duration="0.7s">
+                        <svg data-svg-type="fill" viewBox="0 0 320 512">
+                                               <path d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"/>
+                                             </svg>                        <span>
+                            <b>Address:</b>
+                            <span>Romania, Baia Mare</span>
+                        </span>
+                        <div class="dm-warning-data">
+                            <p>For security reasons, the address is not displayed. However, you can request the contact address by sending an email to the provided email address.</p>
+                        </div>
+                    </li>
+                    <li data-motion="transition-fade-0 transition-slideInLeft-0" data-duration="0.7s">
+                        <svg data-svg-type="fill" viewBox="0 0 320 512">
+                                               <path d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"/>
+                                             </svg>                        <span>
+                            <b>Phone:</b>
+                            <span>+4074*******</span>
+                        </span>
+                        <div class="dm-warning-data">
+                            <p>For security reasons, the phone number is not displayed. However, you can request the contact phone number by sending a mail to the provided email address.</p>
+                        </div>
+                    </li>
+                </ul>
             </li>
         </ul>
     </container>
