--- a/DM-PersonalPortfolio/content/pages/contact.html
+++ b/DM-PersonalPortfolio/content/pages/contact.html
@@ -4,16 +4,16 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <title>Denis Marginas - Portfolio</title>
-    <link rel="stylesheet" href="../../../themes/dm-theme/assets/css/style.css">
-    <link rel="icon" type="image/x-icon" href="../../../content/img/favicon/favicon.ico">
-    <script src="../../../themes/dm-theme/assets/js/theme_script-dist.js"></script>
+    <link rel="stylesheet" href="../../themes/dm-theme/assets/css/style.css">
+    <link rel="icon" type="image/x-icon" href="../../content/img/favicon/favicon.ico">
+    <script src="../../themes/dm-theme/assets/js/theme_script-dist.js"></script>
 </head>
 <body id="body">
 <header id="header">
     <section>
         <div class="dm-logo">
             <a href="#" class="dm-logo-img">
-                <img data="dm-logo-front" src="../../../content/img/logo/logo.png" alt="Denis Marginas Personal Icon">
+                <img data="dm-logo-front" src="../../content/img/logo/logo.png" alt="Denis Marginas Personal Icon">
             </a>
             <a href="home.html" class="dm-logo-text">
                 <span>Denis</span>
@@ -69,22 +69,7 @@
                                             </svg>          </span>
     </section>
 </header><div id="page-content">
-<section class="dm-web-development-experience grid-background-animation">
-    <container>
-        <ul>
-            <li>
-                <h2 data-motion="transition-fade-0 transition-slideInRight-0" data-duration="1s" data-delay="0s">
-                    <span>WEB DEVELOPMENT</span>
-                    <span>EXPERIENCE</span>
-                </h2>
-                <p data-motion="transition-fade-0 transition-slideInRight-0" data-duration="1s" data-delay="0.4s">Since 2019, I have actively immersed myself in numerous web projects, collaborating with diverse companies to create a wide range of online solutions. Throughout this period, my expertise has encompassed the development of presentation sites, online stores, web applications, SEO optimization, as well as web design.</p>
-            </li>
-            <li>
-                <img width="320px" height="260" src="../../../content/img/design-elements/portfolio-experience-image.png" alt="Web Development Experience" data-motion="transition-fade-0 transition-slideInLeft-0" data-duration="1s" data-delay="0.1s">
-            </li>
-        </ul>
-    </container>
-</section>
+
 </div>        <footer id="footer">
             <section>
                 <div class="dm-footer-contact">
