--- a/DM-PersonalPortfolio/index.html
+++ b/DM-PersonalPortfolio/index.html
@@ -1,4 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <h1>In Progress</h1>
+<head>
+  <title>Redirecting...</title>
+  <script>
+    window.location.href = "content/pages/home.html";
+  </script>
+</head>
+<body>
+<p>If you are not redirected, <a href="content/pages/home.html">click here</a>.</p>
+</body>
 </html>
