Page: Contact - in progress
- fixed person-circle-card element
- added resume section - in progress

--- a/DM-PersonalPortfolio/themes/dm-theme/templates-html/section-contact-data.html
+++ b/DM-PersonalPortfolio/themes/dm-theme/templates-html/section-contact-data.html
@@ -6,9 +6,8 @@
     <title>Denis Marginas - Portfolio</title>
     <link rel="stylesheet" href="../../../themes/dm-theme/assets/css/style.css">
     <link rel="icon" type="image/x-icon" href="../../../content/img/favicon/favicon.ico">
-    <script src="../../../themes/dm-theme/assets/js/theme_script-dist.js"></script>
-</head>
-<body id="body">
+    <script src="../../../themes/dm-theme/assets/js/theme_script.js"></script>
+</head><body id="body">
 <header id="header">
     <section>
         <div class="dm-logo">
@@ -68,7 +67,30 @@
                                               <path d="M0 15.75C0 15.3358 0.335786 15 0.75 15H10.5H20.25C20.6642 15 21 15.3358 21 15.75V15.75C21 16.1642 20.6642 16.5 20.25 16.5H0.75C0.335786 16.5 0 16.1642 0 15.75V15.75Z"/>
                                             </svg>          </span>
     </section>
-</header><div id="page-content">
+</header>
+
+    <section class="dm-debug">
+        <span>
+            <a class="btn-render" href="#" data-href="../../../content/render/render.php">Render</a>
+            <a class="btn-log" href="#">Log</a>
+        </span>
+        <div class="data-log" style="display: none !important;">
+            <span class="log-close">x</span>
+            <p class="log-header">Log Data:</p>
+            <ul>
+                                    <li>Rendered render_sections/section-about.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-about.html
+</li>
+                                    <li>Rendered render_sections/section-categories.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-categories.html
+</li>
+                            </ul>
+        </div>
+    </section>
+
+
+
+
+
+<div id="page-content">
 <section class="dm-contact-data grid-background-animation">
     <container>
         <ul>
@@ -84,7 +106,8 @@
             </li>
             <li>
                 <h2 data-motion="transition-fade-0 transition-slideInLeft-0" data-duration="0.5s">Contact Data</h2>
-                <p data-motion="transition-fade-0 transition-slideInLeft-0">You can reach me by phone on WhatsApp or through my personal email address. Contact details are provided in the section below.</p>
+                <p data-motion="transition-fade-0 transition-slideInLeft-0">You can reach me by phone on WhatsApp or through my personal email address.</p>
+                <p data-motion="transition-fade-0 transition-slideInLeft-0">Contact details are provided in the section below.</p>
                 <ul>
                     <li data-motion="transition-fade-0 transition-slideInLeft-0" data-duration="0.6s">
                         <svg data-svg-type="fill" viewBox="0 0 320 512">
