--- a/DM-PersonalPortfolio/themes/dm-theme/templates-html/section-debug.html
+++ b/DM-PersonalPortfolio/themes/dm-theme/templates-html/section-debug.html
@@ -4,15 +4,15 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <title>Denis Marginas - Portfolio</title>
-    <link rel="stylesheet" href="../../themes/dm-theme/assets/css/style.css">
-    <link rel="icon" type="image/x-icon" href="../../content/img/favicon/favicon.ico">
-    <script src="../../themes/dm-theme/assets/js/theme_script.js"></script>
+    <link rel="stylesheet" href="../../../themes/dm-theme/assets/css/style.css">
+    <link rel="icon" type="image/x-icon" href="../../../content/img/favicon/favicon.ico">
+    <script src="../../../themes/dm-theme/assets/js/theme_script.js"></script>
 </head><body id="body">
 <header id="header">
     <section>
         <div class="dm-logo">
             <a href="#" class="dm-logo-img">
-                <img data="dm-logo-front" src="../../content/img/logo/logo.png" alt="Denis Marginas Personal Icon">
+                <img data="dm-logo-front" src="../../../content/img/logo/logo.png" alt="Denis Marginas Personal Icon">
             </a>
             <a href="home.html" class="dm-logo-text">
                 <span>Denis</span>
@@ -71,7 +71,7 @@
 
     <section class="dm-debug">
         <span>
-            <a class="btn-render" href="#" data-href="../../content/render/render.php">Render</a>
+            <a class="btn-render" href="#" data-href="../../../content/render/render.php">Render</a>
             <a class="btn-log" href="#">Log</a>
         </span>
         <div class="data-log" style="display: none !important;">
@@ -84,16 +84,6 @@
 </li>
                                     <li>Rendered render_sections/section-contact-data.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-contact-data.html
 </li>
-                                    <li>Rendered render_sections/section-debug.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-debug.html
-</li>
-                                    <li>Rendered render_sections/section-resume-data.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-resume-data.html
-</li>
-                                    <li>Rendered render_sections/section-web-development-description.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-web-development-description.html
-</li>
-                                    <li>Rendered render_sections/section-web-development-experience.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-web-development-experience.html
-</li>
-                                    <li>Rendered render_pages/contact.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../pages/contact.html
-</li>
                             </ul>
         </div>
     </section>
@@ -103,6 +93,28 @@
 
 
 <div id="page-content">
+    <section class="dm-debug">
+        <span>
+            <a class="btn-render" href="#" data-href="../../../content/render/render.php">Render</a>
+            <a class="btn-log" href="#">Log</a>
+        </span>
+        <div class="data-log" style="display: none !important;">
+            <span class="log-close">x</span>
+            <p class="log-header">Log Data:</p>
+            <ul>
+                                    <li>Rendered render_sections/section-about.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-about.html
+</li>
+                                    <li>Rendered render_sections/section-categories.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-categories.html
+</li>
+                                    <li>Rendered render_sections/section-contact-data.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-contact-data.html
+</li>
+                            </ul>
+        </div>
+    </section>
+
+
+
+
 
 </div>        <footer id="footer">
             <section>
