Page: Contact - finish

--- a/DM-PersonalPortfolio/content/pages/about.html
+++ b/DM-PersonalPortfolio/content/pages/about.html
@@ -4,15 +4,15 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <title>Denis Marginas - Portfolio</title>
-    <link rel="stylesheet" href="../../../themes/dm-theme/assets/css/style.css">
-    <link rel="icon" type="image/x-icon" href="../../../content/img/favicon/favicon.ico">
-    <script src="../../../themes/dm-theme/assets/js/theme_script.js"></script>
+    <link rel="stylesheet" href="../../themes/dm-theme/assets/css/style.css">
+    <link rel="icon" type="image/x-icon" href="../../content/img/favicon/favicon.ico">
+    <script src="../../themes/dm-theme/assets/js/theme_script.js"></script>
 </head><body id="body">
 <header id="header">
     <section>
         <div class="dm-logo">
             <a href="#" class="dm-logo-img">
-                <img data="dm-logo-front" src="../../../content/img/logo/logo.png" alt="Denis Marginas Personal Icon">
+                <img data="dm-logo-front" src="../../content/img/logo/logo.png" alt="Denis Marginas Personal Icon">
             </a>
             <a href="home.html" class="dm-logo-text">
                 <span>Denis</span>
@@ -76,10 +76,11 @@
 
 
 <section class="dm-about grid-background-animation"
+                 data-layout="standard"
             >
     <container>
         <div data-motion="transition-fade-0 transition-slideInRight-0" data-duration="1s">
-            <img data-motion="transition-fade-0" data-duration="1s" data-delay="0.4s" src="../../../content/img/personal-images/dm-personal-image-1.png" width="357px" height="570px" alt="DM - Personal Image">
+            <img data-motion="transition-fade-0" data-duration="1s" data-delay="0.4s" src="../../content/img/personal-images/dm-personal-image-1.png" width="357px" height="570px" alt="DM - Personal Image">
             <svg data-svg-type="fill" width="40" height="62" viewBox="0 0 40 62">
                                                  <path d="M0 18.5C0 16.9 1.4 15.6 3 15.6C4.6 15.6 6 16.9 6 18.5V35.7C6 37.4 4.6 38.7 3 38.7C1.4 38.7 0 37.4 0 35.7V18.5Z"/>
                                                  <path d="M11.7 29.4C11.7 27.8 13.1 26.4 14.7 26.4C16.4 26.4 17.7 27.8 17.7 29.4V46.6C17.7 48.3 16.4 49.6 14.7 49.6C13.1 49.6 11.7 48.3 11.7 46.6V29.4Z"/>
@@ -93,30 +94,40 @@
             <h2 data-motion="transition-fade-0 transition-slideInLeft-0" data-duration="0.5s">About</h2>
                         <p data-motion="transition-fade-0 transition-slideInLeft-0">
                 My name is Denis Ionuț Mărginaș, I'm 25-year-old, and I've been working as a full-stack web developer and photo-video editor since 2019. Before entering the web development field, I worked as a freelance video editor, specializing in editing videos for video games. After completing my university studies in Mathematics and Informatics, I shifted my focus to web development and began pursuing a career in that field.            </p>
-            <br />
-<b>Warning</b>:  Undefined variable $layout in <b>C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render\render_sections\section-about.php</b> on line <b>28</b><br />
-                        <p data-motion="transition-fade-0 transition-slideInLeft-0">
+                                    <p data-motion="transition-fade-0 transition-slideInLeft-0">
                 In 2019, I joined Pia Soft Product as a web developer and video-photo editor. During my time there, I worked on various tasks, including creating presentation websites and online shops using platforms like WordPress and Prestashop. I also handled SEO optimization, website and host maintenance, customer communication, and designing banners, logos, and video advertisements. Working independently on my tasks, I took the initiative to learn from scratch, except for my prior experience in video editing. Additionally, I developed web applications using PHP, TPL, SQL, JavaScript, jQuery, HTML, CSS, and more.            </p>
-            <br />
-<b>Warning</b>:  Undefined variable $layout in <b>C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render\render_sections\section-about.php</b> on line <b>28</b><br />
-                        <p data-motion="transition-fade-0 transition-slideInLeft-0">
+                                    <p data-motion="transition-fade-0 transition-slideInLeft-0">
                 Towards the end of 2021, I transitioned to working full time at Netex Romania, where I was hired as a front-end developer. My responsibilities involved maintaining multiple WordPress websites and working on web design projects. The web design aspect was particularly challenging as I received templates and page sections in formats, similar to Figma projects, and had to recreate them as static web pages using HTML, SASS, Node.js, Bootstrap, JavaScript, and jQuery. Initially, I worked independently on my part of the project, but later collaborated with a colleague who joined to assist with the same project. During this time, I gained valuable experience with the GitLab platform, learned Git commands, and improved my teamwork skills.            </p>
-            <br />
-<b>Warning</b>:  Undefined variable $layout in <b>C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render\render_sections\section-about.php</b> on line <b>28</b><br />
-                    </div>
+                                </div>
     </container>
 </section>
 
 
 </div>            <section class="dm-debug">
         <span>
-            <a class="btn-render" href="#" data-href="../../../content/render/render.php">Render</a>
+            <a class="btn-render" href="#" data-href="../../content/render/render.php">Render</a>
             <a class="btn-log" href="#">Log</a>
         </span>
         <div class="data-log" style="display: none !important;">
             <span class="log-close">x</span>
             <p class="log-header">Log Data:</p>
             <ul>
+                                    <li>Rendered render_sections/section-about.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-about.html
+</li>
+                                    <li>Rendered render_sections/section-categories.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-categories.html
+</li>
+                                    <li>Rendered render_sections/section-contact-data.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-contact-data.html
+</li>
+                                    <li>Rendered render_sections/section-contact-details.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-contact-details.html
+</li>
+                                    <li>Rendered render_sections/section-debug.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-debug.html
+</li>
+                                    <li>Rendered render_sections/section-resume-data.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-resume-data.html
+</li>
+                                    <li>Rendered render_sections/section-web-development-description.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-web-development-description.html
+</li>
+                                    <li>Rendered render_sections/section-web-development-experience.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-web-development-experience.html
+</li>
                             </ul>
         </div>
     </section>
