--- a/DM-PersonalPortfolio/content/pages/experience.html
+++ b/DM-PersonalPortfolio/content/pages/experience.html
@@ -25,6 +25,9 @@
                     <a href="home.html">Home</a>
                 </li>
                 <li>
+                    <a href="about.html">About</a>
+                </li>
+                <li>
                     <a href="experience.html">Experience</a>
                 </li>
                 <li>
@@ -69,7 +72,9 @@
     </section>
 </header>
 
-    <section class="dm-debug">
+<div id="page-content">
+
+</div>            <section class="dm-debug">
         <span>
             <a class="btn-render" href="#" data-href="../../content/render/render.php">Render</a>
             <a class="btn-log" href="#">Log</a>
@@ -84,6 +89,8 @@
 </li>
                                     <li>Rendered render_sections/section-contact-data.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-contact-data.html
 </li>
+                                    <li>Rendered render_sections/section-contact-details.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-contact-details.html
+</li>
                                     <li>Rendered render_sections/section-debug.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-debug.html
 </li>
                                     <li>Rendered render_sections/section-resume-data.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-resume-data.html
@@ -91,6 +98,8 @@
                                     <li>Rendered render_sections/section-web-development-description.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-web-development-description.html
 </li>
                                     <li>Rendered render_sections/section-web-development-experience.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-web-development-experience.html
+</li>
+                                    <li>Rendered render_pages/about.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../pages/about.html
 </li>
                                     <li>Rendered render_pages/contact.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../pages/contact.html
 </li>
@@ -102,9 +111,7 @@
 
 
 
-<div id="page-content">
-
-</div>        <footer id="footer">
+        <footer id="footer">
             <section>
                 <div class="dm-footer-contact">
                     <h5>Contact</h5>
