--- a/DM-PersonalPortfolio/themes/dm-theme/templates-html/section-web-development-experience.html
+++ b/DM-PersonalPortfolio/themes/dm-theme/templates-html/section-web-development-experience.html
@@ -25,6 +25,9 @@
                     <a href="home.html">Home</a>
                 </li>
                 <li>
+                    <a href="about.html">About</a>
+                </li>
+                <li>
                     <a href="experience.html">Experience</a>
                 </li>
                 <li>
@@ -69,7 +72,24 @@
     </section>
 </header>
 
-    <section class="dm-debug">
+<div id="page-content">
+<section class="dm-web-development-experience grid-background-animation">
+    <container>
+        <ul>
+            <li>
+                <h2 data-motion="transition-fade-0 transition-slideInRight-0" data-duration="0.7s" data-delay="0s">
+                    <span>WEB DEVELOPMENT</span>
+                    <span>EXPERIENCE</span>
+                </h2>
+                <p data-motion="transition-fade-0 transition-slideInRight-0" data-duration="1s" data-delay="0.1s">Since 2019, I have actively immersed myself in numerous web projects, collaborating with diverse companies to create a wide range of online solutions. Throughout this period, my expertise has encompassed the development of presentation sites, online stores, web applications, SEO optimization, as well as web design.</p>
+            </li>
+            <li>
+                <img width="320px" height="260" src="../../../content/img/design-elements/portfolio-experience-image.png" alt="Web Development Experience" data-motion="transition-fade-0 transition-slideInLeft-0" data-duration="1s" data-delay="0.1s">
+            </li>
+        </ul>
+    </container>
+</section>
+</div>            <section class="dm-debug">
         <span>
             <a class="btn-render" href="#" data-href="../../../content/render/render.php">Render</a>
             <a class="btn-log" href="#">Log</a>
@@ -83,6 +103,8 @@
                                     <li>Rendered render_sections/section-categories.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-categories.html
 </li>
                                     <li>Rendered render_sections/section-contact-data.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-contact-data.html
+</li>
+                                    <li>Rendered render_sections/section-contact-details.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-contact-details.html
 </li>
                                     <li>Rendered render_sections/section-debug.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-debug.html
 </li>
@@ -98,24 +120,7 @@
 
 
 
-<div id="page-content">
-<section class="dm-web-development-experience grid-background-animation">
-    <container>
-        <ul>
-            <li>
-                <h2 data-motion="transition-fade-0 transition-slideInRight-0" data-duration="1s" data-delay="0s">
-                    <span>WEB DEVELOPMENT</span>
-                    <span>EXPERIENCE</span>
-                </h2>
-                <p data-motion="transition-fade-0 transition-slideInRight-0" data-duration="1s" data-delay="0.4s">Since 2019, I have actively immersed myself in numerous web projects, collaborating with diverse companies to create a wide range of online solutions. Throughout this period, my expertise has encompassed the development of presentation sites, online stores, web applications, SEO optimization, as well as web design.</p>
-            </li>
-            <li>
-                <img width="320px" height="260" src="../../../content/img/design-elements/portfolio-experience-image.png" alt="Web Development Experience" data-motion="transition-fade-0 transition-slideInLeft-0" data-duration="1s" data-delay="0.1s">
-            </li>
-        </ul>
-    </container>
-</section>
-</div>        <footer id="footer">
+        <footer id="footer">
             <section>
                 <div class="dm-footer-contact">
                     <h5>Contact</h5>
