--- a/DM-PersonalPortfolio/content/pages/home.html
+++ b/DM-PersonalPortfolio/content/pages/home.html
@@ -25,6 +25,9 @@
                     <a href="home.html">Home</a>
                 </li>
                 <li>
+                    <a href="about.html">About</a>
+                </li>
+                <li>
                     <a href="experience.html">Experience</a>
                 </li>
                 <li>
@@ -69,46 +72,15 @@
     </section>
 </header>
 
-    <section class="dm-debug">
-        <span>
-            <a class="btn-render" href="#" data-href="../../content/render/render.php">Render</a>
-            <a class="btn-log" href="#">Log</a>
-        </span>
-        <div class="data-log" style="display: none !important;">
-            <span class="log-close">x</span>
-            <p class="log-header">Log Data:</p>
-            <ul>
-                                    <li>Rendered render_sections/section-about.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-about.html
-</li>
-                                    <li>Rendered render_sections/section-categories.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-categories.html
-</li>
-                                    <li>Rendered render_sections/section-contact-data.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-contact-data.html
-</li>
-                                    <li>Rendered render_sections/section-debug.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-debug.html
-</li>
-                                    <li>Rendered render_sections/section-resume-data.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-resume-data.html
-</li>
-                                    <li>Rendered render_sections/section-web-development-description.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-web-development-description.html
-</li>
-                                    <li>Rendered render_sections/section-web-development-experience.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-web-development-experience.html
-</li>
-                                    <li>Rendered render_pages/contact.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../pages/contact.html
-</li>
-                                    <li>Rendered render_pages/experience.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../pages/experience.html
-</li>
-                            </ul>
-        </div>
-    </section>
-
-
-
-
-
 <div id="page-content">
-<section class="dm-about grid-background-animation">
+
+
+<section class="dm-about grid-background-animation"
+                 data-layout="compress"
+            >
     <container>
-        <div data-motion="transition-fade-0 transition-slideInRight-0" data-duration="1s" data-delay="0.3s">
-            <img data-motion="transition-fade-0" data-duration="1s" data-delay="0.7s" src="../../content/img/personal-images/dm-personal-image-1.png" width="357px" height="570px" alt="DM - Personal Image">
+        <div data-motion="transition-fade-0 transition-slideInRight-0" data-duration="1s">
+            <img data-motion="transition-fade-0" data-duration="1s" data-delay="0.4s" src="../../content/img/personal-images/dm-personal-image-1.png" width="357px" height="570px" alt="DM - Personal Image">
             <svg data-svg-type="fill" width="40" height="62" viewBox="0 0 40 62">
                                                  <path d="M0 18.5C0 16.9 1.4 15.6 3 15.6C4.6 15.6 6 16.9 6 18.5V35.7C6 37.4 4.6 38.7 3 38.7C1.4 38.7 0 37.4 0 35.7V18.5Z"/>
                                                  <path d="M11.7 29.4C11.7 27.8 13.1 26.4 14.7 26.4C16.4 26.4 17.7 27.8 17.7 29.4V46.6C17.7 48.3 16.4 49.6 14.7 49.6C13.1 49.6 11.7 48.3 11.7 46.6V29.4Z"/>
@@ -116,14 +88,14 @@
                                                  <path d="M23.2 15.3C23.2 13.7 24.6 12.3 26.2 12.3C27.8 12.3 29.2 13.7 29.2 15.3V32.5C29.2 34.2 27.8 35.5 26.2 35.5C24.6 35.5 23.2 34.2 23.2 32.5V15.3Z"/>
                                                  <path d="M23.2 41.8C23.2 40.2 24.6 38.9 26.2 38.9C27.8 38.9 29.2 40.2 29.2 41.8V59C29.2 60.7 27.8 62 26.2 62C24.6 62 23.2 60.7 23.2 59V41.8Z"/>
                                                  <path d="M34.1 30.1C34.1 28.5 35.4 27.1 37 27.1C38.7 27.1 40 28.5 40 30.1V47.3C40 49 38.7 50.3 37 50.3C35.4 50.3 34.1 49 34.1 47.3V30.1Z"/>
-                                             </svg>            <span data-motion="transition-fade-0 transition-slideInRight-0" data-duration="1s" data-delay="0.7s"></span>
+                                             </svg>            <span data-motion="transition-fade-0 transition-slideInRight-0" data-duration="1s" data-delay="0.5s"></span>
         </div>
         <div>
             <h2 data-motion="transition-fade-0 transition-slideInLeft-0" data-duration="0.5s">About</h2>
-            <p data-motion="transition-fade-0 transition-slideInLeft-0">My name is Denis Ionuț Mărginaș, I'm 25-year-old, and I've been working as a full-stack web developer and photo-video editor since 2019. Before entering the web development field, I worked as a freelance video editor, specializing in editing videos for video games. After completing my university studies in Mathematics and Informatics, I shifted my focus to web development and began pursuing a career in that field.</p>
-            <p data-motion="transition-fade-0 transition-slideInLeft-0">In 2019, I joined Pia Soft Product as a web developer and video-photo editor. During my time there, I worked on various tasks, including creating presentation websites and online shops using platforms like WordPress and Prestashop. I also handled SEO optimization, website and host maintenance, customer communication, and designing banners, logos, and video advertisements. Working independently on my tasks, I took the initiative to learn from scratch, except for my prior experience in video editing. Additionally, I developed web applications using PHP, TPL, SQL, JavaScript, jQuery, HTML, CSS, and more.</p>
-            <p data-motion="transition-fade-0 transition-slideInLeft-0">Towards the end of 2021, I transitioned to working full time at Netex Romania, where I was hired as a front-end developer. My responsibilities involved maintaining multiple WordPress websites and working on web design projects. The web design aspect was particularly challenging as I received templates and page sections in formats, similar to Figma projects, and had to recreate them as static web pages using HTML, SASS, Node.js, Bootstrap, JavaScript, and jQuery. Initially, I worked independently on my part of the project, but later collaborated with a colleague who joined to assist with the same project. During this time, I gained valuable experience with the GitLab platform, learned Git commands, and improved my teamwork skills.</p>
-        </div>
+                        <p data-motion="transition-fade-0 transition-slideInLeft-0">
+                My name is Denis Ionuț Mărginaș, I'm 25-year-old, and I've been working as a full-stack web developer and photo-video editor since 2019. Before entering the web development field, I worked as a freelance video editor, specializing in editing videos for video games. After completing my university studies in Mathematics and Informatics, I shifted my focus to web development and began pursuing a career in that field.            </p>
+                            <a data-motion="transition-fade-0 transition-slideInRight-0" data-duration="0.4s" href="about.html" data-button="primary">More Details</a>
+                        </div>
     </container>
 </section>
 
@@ -341,11 +313,11 @@
     <container>
         <ul>
             <li>
-                <h2 data-motion="transition-fade-0 transition-slideInRight-0" data-duration="1s" data-delay="0s">
+                <h2 data-motion="transition-fade-0 transition-slideInRight-0" data-duration="0.7s" data-delay="0s">
                     <span>WEB DEVELOPMENT</span>
                     <span>EXPERIENCE</span>
                 </h2>
-                <p data-motion="transition-fade-0 transition-slideInRight-0" data-duration="1s" data-delay="0.4s">Since 2019, I have actively immersed myself in numerous web projects, collaborating with diverse companies to create a wide range of online solutions. Throughout this period, my expertise has encompassed the development of presentation sites, online stores, web applications, SEO optimization, as well as web design.</p>
+                <p data-motion="transition-fade-0 transition-slideInRight-0" data-duration="1s" data-delay="0.1s">Since 2019, I have actively immersed myself in numerous web projects, collaborating with diverse companies to create a wide range of online solutions. Throughout this period, my expertise has encompassed the development of presentation sites, online stores, web applications, SEO optimization, as well as web design.</p>
             </li>
             <li>
                 <img width="320px" height="260" src="../../content/img/design-elements/portfolio-experience-image.png" alt="Web Development Experience" data-motion="transition-fade-0 transition-slideInLeft-0" data-duration="1s" data-delay="0.1s">
@@ -397,7 +369,46 @@
     <div class='light x8'></div>
     <div class='light x9'></div>
 </section>
-</div>        <footer id="footer">
+</div>            <section class="dm-debug">
+        <span>
+            <a class="btn-render" href="#" data-href="../../content/render/render.php">Render</a>
+            <a class="btn-log" href="#">Log</a>
+        </span>
+        <div class="data-log" style="display: none !important;">
+            <span class="log-close">x</span>
+            <p class="log-header">Log Data:</p>
+            <ul>
+                                    <li>Rendered render_sections/section-about.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-about.html
+</li>
+                                    <li>Rendered render_sections/section-categories.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-categories.html
+</li>
+                                    <li>Rendered render_sections/section-contact-data.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-contact-data.html
+</li>
+                                    <li>Rendered render_sections/section-contact-details.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-contact-details.html
+</li>
+                                    <li>Rendered render_sections/section-debug.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-debug.html
+</li>
+                                    <li>Rendered render_sections/section-resume-data.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-resume-data.html
+</li>
+                                    <li>Rendered render_sections/section-web-development-description.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-web-development-description.html
+</li>
+                                    <li>Rendered render_sections/section-web-development-experience.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-web-development-experience.html
+</li>
+                                    <li>Rendered render_pages/about.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../pages/about.html
+</li>
+                                    <li>Rendered render_pages/contact.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../pages/contact.html
+</li>
+                                    <li>Rendered render_pages/experience.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../pages/experience.html
+</li>
+                            </ul>
+        </div>
+    </section>
+
+
+
+
+
+        <footer id="footer">
             <section>
                 <div class="dm-footer-contact">
                     <h5>Contact</h5>
