--- a/DM-PersonalPortfolio/content/pages/portfolio.html
+++ b/DM-PersonalPortfolio/content/pages/portfolio.html
@@ -25,6 +25,9 @@
                     <a href="home.html">Home</a>
                 </li>
                 <li>
+                    <a href="about.html">About</a>
+                </li>
+                <li>
                     <a href="experience.html">Experience</a>
                 </li>
                 <li>
@@ -68,43 +71,6 @@
                                             </svg>          </span>
     </section>
 </header>
-
-    <section class="dm-debug">
-        <span>
-            <a class="btn-render" href="#" data-href="../../content/render/render.php">Render</a>
-            <a class="btn-log" href="#">Log</a>
-        </span>
-        <div class="data-log" style="display: none !important;">
-            <span class="log-close">x</span>
-            <p class="log-header">Log Data:</p>
-            <ul>
-                                    <li>Rendered render_sections/section-about.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-about.html
-</li>
-                                    <li>Rendered render_sections/section-categories.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-categories.html
-</li>
-                                    <li>Rendered render_sections/section-contact-data.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-contact-data.html
-</li>
-                                    <li>Rendered render_sections/section-debug.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-debug.html
-</li>
-                                    <li>Rendered render_sections/section-resume-data.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-resume-data.html
-</li>
-                                    <li>Rendered render_sections/section-web-development-description.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-web-development-description.html
-</li>
-                                    <li>Rendered render_sections/section-web-development-experience.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-web-development-experience.html
-</li>
-                                    <li>Rendered render_pages/contact.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../pages/contact.html
-</li>
-                                    <li>Rendered render_pages/experience.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../pages/experience.html
-</li>
-                                    <li>Rendered render_pages/home.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../pages/home.html
-</li>
-                            </ul>
-        </div>
-    </section>
-
-
-
-
 
 <div id="page-content">
 <section class="dm-portfolio-categories">
@@ -318,7 +284,48 @@
 
     <!-- Ocean Animation End -->
 </section>
-</div>        <footer id="footer">
+</div>            <section class="dm-debug">
+        <span>
+            <a class="btn-render" href="#" data-href="../../content/render/render.php">Render</a>
+            <a class="btn-log" href="#">Log</a>
+        </span>
+        <div class="data-log" style="display: none !important;">
+            <span class="log-close">x</span>
+            <p class="log-header">Log Data:</p>
+            <ul>
+                                    <li>Rendered render_sections/section-about.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-about.html
+</li>
+                                    <li>Rendered render_sections/section-categories.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-categories.html
+</li>
+                                    <li>Rendered render_sections/section-contact-data.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-contact-data.html
+</li>
+                                    <li>Rendered render_sections/section-contact-details.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-contact-details.html
+</li>
+                                    <li>Rendered render_sections/section-debug.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-debug.html
+</li>
+                                    <li>Rendered render_sections/section-resume-data.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-resume-data.html
+</li>
+                                    <li>Rendered render_sections/section-web-development-description.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-web-development-description.html
+</li>
+                                    <li>Rendered render_sections/section-web-development-experience.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-web-development-experience.html
+</li>
+                                    <li>Rendered render_pages/about.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../pages/about.html
+</li>
+                                    <li>Rendered render_pages/contact.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../pages/contact.html
+</li>
+                                    <li>Rendered render_pages/experience.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../pages/experience.html
+</li>
+                                    <li>Rendered render_pages/home.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../pages/home.html
+</li>
+                            </ul>
+        </div>
+    </section>
+
+
+
+
+
+        <footer id="footer">
             <section>
                 <div class="dm-footer-contact">
                     <h5>Contact</h5>
