--- a/DM-PersonalPortfolio/themes/dm-theme/templates-html/section-categories.html
+++ b/DM-PersonalPortfolio/themes/dm-theme/templates-html/section-categories.html
@@ -25,6 +25,9 @@
                     <a href="home.html">Home</a>
                 </li>
                 <li>
+                    <a href="about.html">About</a>
+                </li>
+                <li>
                     <a href="experience.html">Experience</a>
                 </li>
                 <li>
@@ -68,25 +71,6 @@
                                             </svg>          </span>
     </section>
 </header>
-
-    <section class="dm-debug">
-        <span>
-            <a class="btn-render" href="#" data-href="../../../content/render/render.php">Render</a>
-            <a class="btn-log" href="#">Log</a>
-        </span>
-        <div class="data-log" style="display: none !important;">
-            <span class="log-close">x</span>
-            <p class="log-header">Log Data:</p>
-            <ul>
-                                    <li>Rendered render_sections/section-about.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-about.html
-</li>
-                            </ul>
-        </div>
-    </section>
-
-
-
-
 
 <div id="page-content">
 <section class="dm-portfolio-categories">
@@ -300,7 +284,26 @@
 
     <!-- Ocean Animation End -->
 </section>
-</div>        <footer id="footer">
+</div>            <section class="dm-debug">
+        <span>
+            <a class="btn-render" href="#" data-href="../../../content/render/render.php">Render</a>
+            <a class="btn-log" href="#">Log</a>
+        </span>
+        <div class="data-log" style="display: none !important;">
+            <span class="log-close">x</span>
+            <p class="log-header">Log Data:</p>
+            <ul>
+                                    <li>Rendered render_sections/section-about.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-about.html
+</li>
+                            </ul>
+        </div>
+    </section>
+
+
+
+
+
+        <footer id="footer">
             <section>
                 <div class="dm-footer-contact">
                     <h5>Contact</h5>
