--- a/DM-PersonalPortfolio/themes/dm-theme/templates-html/section-contact-details.html
+++ b/DM-PersonalPortfolio/themes/dm-theme/templates-html/section-contact-details.html
@@ -73,37 +73,69 @@
 </header>
 
 <div id="page-content">
-
-
-<section class="dm-about grid-background-animation"
-            >
+<section class="dm-contact-details grid-background-animation">
     <container>
-        <div data-motion="transition-fade-0 transition-slideInRight-0" data-duration="1s">
-            <img data-motion="transition-fade-0" data-duration="1s" data-delay="0.4s" src="../../../content/img/personal-images/dm-personal-image-1.png" width="357px" height="570px" alt="DM - Personal Image">
-            <svg data-svg-type="fill" width="40" height="62" viewBox="0 0 40 62">
-                                                 <path d="M0 18.5C0 16.9 1.4 15.6 3 15.6C4.6 15.6 6 16.9 6 18.5V35.7C6 37.4 4.6 38.7 3 38.7C1.4 38.7 0 37.4 0 35.7V18.5Z"/>
-                                                 <path d="M11.7 29.4C11.7 27.8 13.1 26.4 14.7 26.4C16.4 26.4 17.7 27.8 17.7 29.4V46.6C17.7 48.3 16.4 49.6 14.7 49.6C13.1 49.6 11.7 48.3 11.7 46.6V29.4Z"/>
-                                                 <path d="M11.7 3C11.7 1.4 13.1 0 14.7 0C16.4 0 17.7 1.4 17.7 3V20.2C17.7 21.9 16.4 23.2 14.7 23.2C13.1 23.2 11.7 21.9 11.7 20.2V3Z"/>
-                                                 <path d="M23.2 15.3C23.2 13.7 24.6 12.3 26.2 12.3C27.8 12.3 29.2 13.7 29.2 15.3V32.5C29.2 34.2 27.8 35.5 26.2 35.5C24.6 35.5 23.2 34.2 23.2 32.5V15.3Z"/>
-                                                 <path d="M23.2 41.8C23.2 40.2 24.6 38.9 26.2 38.9C27.8 38.9 29.2 40.2 29.2 41.8V59C29.2 60.7 27.8 62 26.2 62C24.6 62 23.2 60.7 23.2 59V41.8Z"/>
-                                                 <path d="M34.1 30.1C34.1 28.5 35.4 27.1 37 27.1C38.7 27.1 40 28.5 40 30.1V47.3C40 49 38.7 50.3 37 50.3C35.4 50.3 34.1 49 34.1 47.3V30.1Z"/>
-                                             </svg>            <span data-motion="transition-fade-0 transition-slideInRight-0" data-duration="1s" data-delay="0.5s"></span>
-        </div>
-        <div>
-            <h2 data-motion="transition-fade-0 transition-slideInLeft-0" data-duration="0.5s">About</h2>
-                        <p data-motion="transition-fade-0 transition-slideInLeft-0">
-                My name is Denis Ionuț Mărginaș, I'm 25-year-old, and I've been working as a full-stack web developer and photo-video editor since 2019. Before entering the web development field, I worked as a freelance video editor, specializing in editing videos for video games. After completing my university studies in Mathematics and Informatics, I shifted my focus to web development and began pursuing a career in that field.            </p>
-            <br />
-<b>Warning</b>:  Undefined variable $layout in <b>C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render\render_sections\section-about.php</b> on line <b>28</b><br />
-                        <p data-motion="transition-fade-0 transition-slideInLeft-0">
-                In 2019, I joined Pia Soft Product as a web developer and video-photo editor. During my time there, I worked on various tasks, including creating presentation websites and online shops using platforms like WordPress and Prestashop. I also handled SEO optimization, website and host maintenance, customer communication, and designing banners, logos, and video advertisements. Working independently on my tasks, I took the initiative to learn from scratch, except for my prior experience in video editing. Additionally, I developed web applications using PHP, TPL, SQL, JavaScript, jQuery, HTML, CSS, and more.            </p>
-            <br />
-<b>Warning</b>:  Undefined variable $layout in <b>C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render\render_sections\section-about.php</b> on line <b>28</b><br />
-                        <p data-motion="transition-fade-0 transition-slideInLeft-0">
-                Towards the end of 2021, I transitioned to working full time at Netex Romania, where I was hired as a front-end developer. My responsibilities involved maintaining multiple WordPress websites and working on web design projects. The web design aspect was particularly challenging as I received templates and page sections in formats, similar to Figma projects, and had to recreate them as static web pages using HTML, SASS, Node.js, Bootstrap, JavaScript, and jQuery. Initially, I worked independently on my part of the project, but later collaborated with a colleague who joined to assist with the same project. During this time, I gained valuable experience with the GitLab platform, learned Git commands, and improved my teamwork skills.            </p>
-            <br />
-<b>Warning</b>:  Undefined variable $layout in <b>C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render\render_sections\section-about.php</b> on line <b>28</b><br />
-                    </div>
+        <ul>
+            <li>
+                <section class="dm-contact-form">
+                    <h3>Contact Form</h3>
+                    <form id="#dm-form" target="_self" onsubmit="return contact_form_exec();" action="" autocomplete="off" crossorigin="anonymous">
+                        <input id="name" type="text" name="name" placeholder="Name" value="">
+                        <input id="email" type="text" name="email" placeholder="E-mail" value="">
+                        <input id="phone" type="text" name="phone" placeholder="Phone Number" value="">
+                        <textarea id="message" type="text" name="message" placeholder="Message" value=""></textarea>
+                        <div>
+                            <button id="dm-form-button" data-button="primary" data-sitekey="" data-callback='onSubmit' data-action='submit' type="submit">Submit</button>
+                        </div>
+                    </form>
+                </section>
+            </li>
+            <li class="dm-socials">
+                <h4>Socials</h4>
+                <div class="dm-socials-list" data-socials="normal-fill">
+                        <a data-socials="youtube" href="https://www.youtube.com/channel/UCZGb7hnkyawMgnSO9T-rnnQ" target="_blank">
+                            <svg data-svg-type="fill" width="44" height="32" viewBox="0 0 44 32">
+                                <path d="M41.8984 5.5C41.5 3.30078 39.6016 1.69922 37.3984 1.19922C34.1016 0.5 28 0 21.3984 0C14.8008 0 8.60156 0.5 5.30078 1.19922C3.10156 1.69922 1.19922 3.19922 0.800781 5.5C0.398438 8 0 11.5 0 16C0 20.5 0.398438 24 0.898438 26.5C1.30078 28.6992 3.19922 30.3008 5.39844 30.8008C8.89844 31.5 14.8984 32 21.5 32C28.1016 32 34.1016 31.5 37.6016 30.8008C39.8008 30.3008 41.6992 28.8008 42.1016 26.5C42.5 24 43 20.3984 43.1016 16C42.8984 11.5 42.3984 8 41.8984 5.5ZM16 23V9L28.1992 16L16 23Z" fill="#FF3D00"></path>
+                            </svg>
+                        </a>
+                        <a href="https://www.facebook.com/denismarginas09" target="_blank">
+                            <svg data-svg-type="fill" width="22" height="42" viewBox="0 0 22 42">
+                                <path d="M16 -1.10493e-06C10.477 -1.10493e-06 6 4.477 6 10V15H0V23H6V42H14V23H21L22 15H14V11C14 8.791 15.791 7 18 7H22V0.321999C20.091 0.124999 17.921 -0.00400111 16 -1.10493e-06Z" fill="#0573E7"></path>
+                            </svg>
+                        </a>
+                        <a href="https://www.linkedin.com/in/denismarginas09/" target="_blank">
+                            <svg data="twitter" data-svg-type="fill" width="40" height="38" viewBox="0 0 40 38">
+                                <path d="M4.421 9H4.473C7.263 9 9 7 9 4.5C8.948 1.945 7.263 0 4.526 0C1.789 0 0 1.945 0 4.5C0 7 1.736 9 4.421 9ZM0 12H9V38H0V12ZM40 21.5C40 16.253 35.747 12 30.5 12C27.447 12 24.738 13.446 23 15.684V12H14V38H23V23C23 20.791 24.791 19 27 19C29.209 19 31 20.791 31 23V38H40C40 38 40 22.955 40 21.5Z" fill="#0288D1"></path>
+                            </svg>
+                        </a>
+                        <a href="https://twitter.com/DenisMarginas" target="_blank">
+                            <svg data-svg-type="fill" width="37" height="29" viewBox="0 0 37 29">
+                                <path d="M37 3.429C35.677 4.015 34.254 4.406 32.753 4.591C34.279 3.685 35.453 2.24 36.004 0.533C34.576 1.37 32.994 1.985 31.311 2.309C29.967 0.884 28.05 0 25.926 0C21.846 0 18.539 3.278 18.539 7.32C18.539 7.892 18.606 8.449 18.732 8.99C12.594 8.682 7.15001 5.764 3.50801 1.336C2.86801 2.418 2.50801 3.685 2.50801 5.022C2.50801 7.563 3.80901 9.8 5.79301 11.118C4.58201 11.081 3.44201 10.744 2.44401 10.204C2.44401 10.226 2.44401 10.259 2.44401 10.29C2.44401 13.841 4.99101 16.798 8.36701 17.471C7.75001 17.64 7.09801 17.734 6.42601 17.734C5.94901 17.734 5.48401 17.68 5.03401 17.599C5.97401 20.501 8.70101 22.622 11.932 22.685C9.40401 24.645 6.22001 25.819 2.75801 25.819C2.16001 25.819 1.57501 25.785 0.997009 25.715C4.26801 27.786 8.15201 29 12.321 29C25.906 29 33.338 17.844 33.338 8.166C33.338 7.849 33.328 7.533 33.313 7.221C34.763 6.197 36.013 4.905 37 3.429Z" fill="#03A9F4"></path>
+                            </svg>
+                        </a>
+
+                        <a data-socials="google-site" href="https://sites.google.com/view/denis-marginas" target="_blank">
+                            <svg data-svg-type="fill" width="45" height="47" viewBox="0 0 45 47">
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M0 0.950012H45V46.05H0V0.950012ZM5.55 15.05H39.4V9.40001H5.55V15.05ZM5.55 35.65H28.05V20.65H5.55V35.65ZM33.6 35.75H39.4V20.7H33.6V35.75Z" fill="#3949AB"></path>
+                            </svg>
+                        </a>
+                    <a data-socials="github" href="https://github.com/denismarginas" target="_blank">
+                        <svg data-svg-type="fill" width="40" height="39" viewBox="0 0 40 39">
+                            <path d="M17.8 0.200015C8.60002 1.20002 1.20002 8.60002 0.200018 17.6C-0.799982 27 4.60002 35.4 12.8 38.6C13.4 38.8 14 38.4 14 37.6V34.4C14 34.4 13.2 34.6 12.2 34.6C9.40002 34.6 8.20002 32.2 8.00002 30.8C7.80002 30 7.40002 29.4 6.80002 28.8C6.20002 28.6 6.00002 28.6 6.00002 28.4C6.00002 28 6.60002 28 6.80002 28C8.00002 28 9.00002 29.4 9.40002 30C10.4 31.6 11.6 32 12.2 32C13 32 13.6 31.8 14 31.6C14.2 30.2 14.8 28.8 16 28C11.4 27 8.00002 24.4 8.00002 20C8.00002 17.8 9.00002 15.6 10.4 14C10.2 13.6 10 12.6 10 11.2C10 10.4 10 9.20002 10.6 8.00002C10.6 8.00002 13.4 8.00002 16.2 10.6C17.2 10.2 18.6 10 20 10C21.4 10 22.8 10.2 24 10.6C26.6 8.00002 29.6 8.00002 29.6 8.00002C30 9.20002 30 10.4 30 11.2C30 12.8 29.8 13.6 29.6 14C31 15.6 32 17.6 32 20C32 24.4 28.6 27 24 28C25.2 29 26 30.8 26 32.6V37.8C26 38.4 26.6 39 27.4 38.8C34.8 35.8 40 28.6 40 20.2C40 8.20002 29.8 -1.19998 17.8 0.200015Z" fill="white"></path>
+                        </svg>
+                    </a>
+                </div>
+                <div class="dm-socials-text">
+                    <a href="https://sites.google.com/view/denis-marginas/portfolio"><span>●</span><b>Google Site:</b> sites.google.com/view/denis-marginas</a>
+                    <a href="https://forms.gle/vTHeLVkc1TwXCxBJA"><span>●</span><b>Google Form:</b> forms.gle/vTHeLVkc1TwXCxBJA</a>
+                    <a href="https://www.facebook.com/denismarginas09"><span>●</span><b>Facebook Page:</b> facebook.com/denismarginas09</a>
+                    <a href="https://www.linkedin.com/in/denismarginas09/"><span>●</span><b>Linkedin:</b> linkedin.com/in/denismarginas09</a>
+                    <a href="https://github.com/denismarginas"><span>●</span><b>Github:</b> github.com/denismarginas</a>
+                    <a href="https://drive.google.com/file/d/1-RYU6uYovCR_LT48nD7CZ1sa6xQ8QJh_/view"><span>●</span><b>CV English:</b> drive.google.com/file/d/1-RYU6uYovCR_LT48nD7CZ1sa6xQ8QJh_/view</a>
+                    <a href="https://drive.google.com/file/d/1_gPqX2MgLJD7bYCgZ977GHX25pVC_ihz/view"><span>●</span><b>CV Romanian:</b> drive.google.com/file/d/1_gPqX2MgLJD7bYCgZ977GHX25pVC_ihz/view</a>
+                </div>
+            </li>
+        </ul>
     </container>
 </section>
 
@@ -117,6 +149,12 @@
             <span class="log-close">x</span>
             <p class="log-header">Log Data:</p>
             <ul>
+                                    <li>Rendered render_sections/section-about.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-about.html
+</li>
+                                    <li>Rendered render_sections/section-categories.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-categories.html
+</li>
+                                    <li>Rendered render_sections/section-contact-data.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-contact-data.html
+</li>
                             </ul>
         </div>
     </section>
