--- a/DM-PersonalPortfolio/themes/dm-theme/templates-html/section-debug.html
+++ b/DM-PersonalPortfolio/themes/dm-theme/templates-html/section-debug.html
@@ -25,6 +25,9 @@
                     <a href="home.html">Home</a>
                 </li>
                 <li>
+                    <a href="about.html">About</a>
+                </li>
+                <li>
                     <a href="experience.html">Experience</a>
                 </li>
                 <li>
@@ -69,29 +72,6 @@
     </section>
 </header>
 
-    <section class="dm-debug">
-        <span>
-            <a class="btn-render" href="#" data-href="../../../content/render/render.php">Render</a>
-            <a class="btn-log" href="#">Log</a>
-        </span>
-        <div class="data-log" style="display: none !important;">
-            <span class="log-close">x</span>
-            <p class="log-header">Log Data:</p>
-            <ul>
-                                    <li>Rendered render_sections/section-about.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-about.html
-</li>
-                                    <li>Rendered render_sections/section-categories.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-categories.html
-</li>
-                                    <li>Rendered render_sections/section-contact-data.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-contact-data.html
-</li>
-                            </ul>
-        </div>
-    </section>
-
-
-
-
-
 <div id="page-content">
     <section class="dm-debug">
         <span>
@@ -108,6 +88,8 @@
 </li>
                                     <li>Rendered render_sections/section-contact-data.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-contact-data.html
 </li>
+                                    <li>Rendered render_sections/section-contact-details.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-contact-details.html
+</li>
                             </ul>
         </div>
     </section>
@@ -116,7 +98,32 @@
 
 
 
-</div>        <footer id="footer">
+</div>            <section class="dm-debug">
+        <span>
+            <a class="btn-render" href="#" data-href="../../../content/render/render.php">Render</a>
+            <a class="btn-log" href="#">Log</a>
+        </span>
+        <div class="data-log" style="display: none !important;">
+            <span class="log-close">x</span>
+            <p class="log-header">Log Data:</p>
+            <ul>
+                                    <li>Rendered render_sections/section-about.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-about.html
+</li>
+                                    <li>Rendered render_sections/section-categories.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-categories.html
+</li>
+                                    <li>Rendered render_sections/section-contact-data.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-contact-data.html
+</li>
+                                    <li>Rendered render_sections/section-contact-details.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../../themes/dm-theme/templates-html/section-contact-details.html
+</li>
+                            </ul>
+        </div>
+    </section>
+
+
+
+
+
+        <footer id="footer">
             <section>
                 <div class="dm-footer-contact">
                     <h5>Contact</h5>
