--- a/DM-PersonalPortfolio/content/pages/catalog.html
+++ b/DM-PersonalPortfolio/content/pages/catalog.html
@@ -1325,6 +1325,8 @@ The website, specializing in selling dresses for girls, is built using Prestasho
             <span class="log-close">x</span>
             <p class="log-header">Log Data:</p>
             <ul>
+                                    <li>Deleted existing .htaccess file
+</li>
                                     <li>Generated .htaccess file
 </li>
                                     <li>Deleted C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../pages/aatoysfurnitures.html
@@ -1566,7 +1568,7 @@ The website, specializing in selling dresses for girls, is built using Prestasho
                 </div>
                 <div class="dm-footer-copyrights">
                     <span class="hide">Begining of the webiste: 04/06/2023</span>
-                    <span>Last update of webiste: 08/08/2023</span>
+                    <span>Last update of webiste: 09/08/2023</span>
                     <span>©All copyrights reserved by Denis Marginas</span>
                 </div>
             </section>
