--- a/DM-PersonalPortfolio/content/pages/experience.html
+++ b/DM-PersonalPortfolio/content/pages/experience.html
@@ -915,6 +915,8 @@
             <span class="log-close">x</span>
             <p class="log-header">Log Data:</p>
             <ul>
+                                    <li>Deleted existing .htaccess file
+</li>
                                     <li>Generated .htaccess file
 </li>
                                     <li>Deleted C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../pages/aatoysfurnitures.html
@@ -1162,7 +1164,7 @@
                 </div>
                 <div class="dm-footer-copyrights">
                     <span class="hide">Begining of the webiste: 04/06/2023</span>
-                    <span>Last update of webiste: 08/08/2023</span>
+                    <span>Last update of webiste: 09/08/2023</span>
                     <span>©All copyrights reserved by Denis Marginas</span>
                 </div>
             </section>
